# code-runner

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.json  package-lock.json  package.json
.github/workflows/: pr-check.yml
_templates/shinkai-tool/new/: built_in_tools.rs.t
apps/demo-shinkai-tool-echo/: project.json
apps/demo-shinkai-tool-ethplorer-tokens/: project.json
apps/demo-shinkai-tool-foobar/: project.json
apps/demo-shinkai-tool-json-to-md/: project.json
apps/demo-shinkai-tool-leiden/: project.json
apps/demo-shinkai-tool-playwright-example/: project.json
apps/demo-shinkai-tool-playwright-example/src/: index.ts
apps/demo-shinkai-tool-token-price/: project.json
apps/demo-shinkai-tool-weather-by-city/: project.json
apps/demo-shinkai-tool-web3-eth-balance/: project.json
apps/demo-shinkai-tool-web3-eth-uniswap/: project.json
apps/shinkai-tool-defillama-tvl-rankings/src/: index.test.ts  index.ts
apps/shinkai-tool-duckduckgo-search/src/: index.test.ts  index.ts
apps/shinkai-tool-perplexity/src/: index.test.ts  index.ts
docker-images/: Dockerfile
libs/hanzo-tools-runner/: Cargo.toml  project.json
libs/hanzo-tools-runner/.cargo/: config.toml
libs/hanzo-tools-runner/src/: copy_assets.rs
libs/hanzo-tools-runner/src/tools/: deno_runner_options.rs  python_runner_options.rs
libs/shinkai-tools-runner/: Cargo.toml  project.json
libs/shinkai-tools-runner/src/: built_in_tools.rs  built_in_tools.test.rs  copy_assets.rs  lib.test.rs
libs/shinkai-viem/src/: index.ts
scripts/: tool-bundler.ts
(+12 files in other folders)
