[workspace]
members = ["libs/hanzo-tools-runner"]
resolver = "2"

[workspace.package]
version = "1.0.2"
repository = "https://github.com/dcSpark/shinkai-code-runner"
keywords = ["shinkai", "tools", "safe", "ai"]
license-file = "LICENSE"
homepage = "https://shinkai.com"
readme = "README.md"
edition = "2021"
